# project-manager

./: README.md  main_scripts.sh
cpp/class/: MY_CLASS.cpp
cpp/new_project/: meson.build
scripts/: create_cpp_class.sh  create_project.sh
subscripts/: create_cpp_class.sh  create_project.sh
templates/cpp/class/: MY_CLASS.hpp
templates/cpp/new_project/: meson.build
templates/cpp/new_project/src/: main.cpp
templates/cpp/new_project_pure_c/: meson.build
templates/cpp/new_project_pure_c/src/: main.c
templates/python/new_project/: main.py
